<resources>
    <string name="app_name">Count It</string>
    <string name="publisher_name">Deico Apps</string>
    <string name="email">support@deicoapps.com</string> <!-- Do Not translate -->
    <string name="reset_title">Reset Counter</string>
    <string name="delete_title">Delete Counter</string>
    <string name="delete_mc_title">Delete Multicounter</string>
    <string name="reset_question">Are you sure you want to reset the counter?</string>
    <string name="delete_question">Are you sure you want to delete this counter?</string>
    <string name="delete_mc_question">Are you sure you want to delete this multicounter?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>m
    <string name="change_count">Change Count</string>
    <string name="max_num">Maximum Number Reached</string>
    <string name="min_num">Minimum Number Reached</string>
    <string name="no_input_message">Nothing was entered!</string>
    <string name="make_negative_num">Make Negative</string>
    <string name="make_count_negative_num">Make Count Negative</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="title_activity_counterlist">Multi-Counters</string>
    <string name="set_counter_name">Counter Name:</string>
    <string name="name_hint">Name</string>
    <string name="init_num_counters">Initial number of counters:</string>
    <string name="create_counter_title">Create New Multi-Counter</string>
    <string name="create_single_counter_title">Create New Counter</string>
    <string name="counter_already_exists">Counter Name already exists!</string>
    <string name="no_counter_name">No counter name was entered!</string>
    <string name="mcounter_already_exists">Multicounter Name already exists!</string>
    <string name="no_mcounter_name">No multicounter name was entered!</string>
    <string name="counter_details_title">Multicounter Details</string>
    <string name="counter_details_name">Name: </string>
    <string name="close">Close</string>
    <string name="counter_details_number_counters">Number of Counters: </string>
    <string name="created">Created: </string>
    <string name="last_modified">Last Modifed: </string>
    <string name="reset_all_title">Reset All</string>
    <string name="reset_all_question">Are you sure you want to reset all counters?</string>
    <string name="create_new">New Multicounter</string>
    <string name="sort">Sort By</string>
    <string name="delete">Delete</string>
    <string name="select_all">Select All</string>
    <string name="deselect_all">Un-Select All</string>
    <string name="selected_title">Selected</string>
    <string name="sure_delete_1">Are you sure you want to delete</string>
    <string name="sure_delete_2">multicounters?</string>
    <string name="confirmation_title">Confirmation</string>
    <string name="select_multiple">Select Multiple</string>
    <string name="counter_options_title">Counter Options</string>
    <string name="already_at_top">Already at top of list</string>
    <string name="already_at_bottom">Already at bottom of list</string>

    <string name="new_c">New Counter</string>
    <string name="rename_mc">Rename Multicounter</string>
    <string name="delete_mc">Delete Multicounter</string>
    <string name="reset_all_c">Reset All Counters</string>
    <string name="switch_view">Choose View</string>

    <string name="full_view">Full View</string>
    <string name="condensed_view">Condensed View</string>


    <string name="invalid_starting_count">Invalid starting count</string>
    <string name="multicounter_activity_title">Counter Name</string>
    <string name="mc_title_length_error">Please enter a title name with 40 characters or less</string>
    <string name="sc_title_length_error">Please enter a title name with 20 characters or less</string>
    <string name="max_number_of_multicounters_error">You have reached the maximum number of multicounters (100)</string>
    <string name="max_number_of_counters_error">You have reached the maximum number of counters (20)</string>
    <string name="count_hint">Count</string>
    <string name="invalid_number_entered">Number entered is invalid</string>
    <string name="rename_single_counter">Rename Counter</string>
    <string name="rename_multi_counter">Rename Multicounter</string>
    <string name="enter_new_count">Enter new count</string>

    <string name="set_starting_count">Starting Count: </string>

    <string name="open_counter">Open</string>
    <string name="rename_counter">Rename</string>
    <string name="delete_counter">Delete</string>
    <string name="details_counter">Details</string>

    <string name="counter_up">Move Up</string>
    <string name="counter_down">Move Down</string>
    <string name="inc_dec_by">Increase/Decrease By</string>
    <string name="change_color">Change Color</string>
    <string name="select">Select</string>
    <string name="amount">Amount</string>
    <string name="increase">Increase (+)</string>
    <string name="decrease">Decrease (-)</string>
    <string name="increase_by">Increase By</string>
    <string name="decrease_by">Decrease By</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="home">Home</string>
    <string name="multi_counter">Multi-Counters</string>
    <string name="settings">Settings</string>
    <string name="share">Share this app</string>
    <string name="rate">Rate this app</string>
    <string name="contact">Contact Us</string>
    <string name="more">More from Developer</string>

    <string name="rate_question">Are you sure you want to go to the Count It app page in the Google Play Store?</string>
    <string name="rate_title">Rate</string>

    <string name="share_title">Share via</string>
    <string name="share_subject">Count It app</string>
    <string name="share_body">Hey, check out this app called Count It!</string>

    <string name="countit_email_subject">Count It - Support</string>
    <string name="send_via_email">Send via email</string>

    <string name="more_question">Are you sure you want to visit the publisher page in the Google Play Store?</string>


    <!-- COLORS ARRAY -->
    <string name="colors_title">Colors</string>
    <string name="colors_sub">Color: </string>
    <string-array name="colors_array">
        <item>White</item>
        <item>Red</item>
        <item>Blue</item>
        <item>Green</item>
        <item>Yellow</item>
        <item>Orange</item>
        <item>Purple</item>
        <item>Pink</item>
        <item>Gray</item>
    </string-array>


    <!-- Strings related to Settings -->

    <!-- SETTINGS -->
    <!--GENERAL-->
    <string name="pref_header_general">General</string>

    <!-- Vibrate -->
    <string name="pref_title_vibrate">Vibration</string>
    <string name="pref_description_vibrate">Enable vibration effect on button press
    </string>

    <!-- Reset Confirmation -->
    <string name="pref_title_resetconfirm">Reset Counter Warning</string>
    <string name="pref_description_resetconfirm">Show warning when resetting the count
    </string>

    <!-- Keep Screen on -->
    <string name="pref_title_screen">Keep Screen Awake</string>
    <string name="pref_description_screen">Keep the screen awake while on the counter screen
    </string>

    <!-- Volume Controls -->
    <string name="pref_title_volume">Volume Controls</string>
    <string name="pref_description_volume">Use the volume buttons for Incremement/Decrement controls (main counter only)
    </string>

    <!--DISPLAY-->

    <!--INFO-->
    <string name="pref_header_info">Info</string>

    <string name="pref_title_contact">Contact</string>

    <string name="pref_title_version">Version Number</string>
    <string name="pref_description_version">1.0
    </string>

    <!--SORT MENU OPTIONS-->
    <string-array name="sort_menu_options_array">
        <item>Name (Ascending)</item>
        <item>Name (Descending)</item>
        <item>Date Created (Recent First)</item>
        <item>Date Created (Oldest First)</item>
        <item>Date Modified (Recent First)</item>
        <item>Date Modified (Oldest First)</item>
    </string-array>
    <string name="sort_by">Sort By:</string>

    <!-- TODO: Remove or change this placeholder text -->

    <!-- TUTORIAL TEXTS -->
    <string name="next">Next</string>
    <string name="done">Done</string>

    <string name="tutorial_plus_title">Add</string>
    <string name="tutorial_plus_text">Tap the plus button to add to the count</string>

    <string name="tutorial_minus_title">Subtract</string>
    <string name="tutorial_minus_text">Tap the minus button to subtract from the count</string>

    <string name="tutorial_reset_title">Reset</string>
    <string name="tutorial_reset_text">Tap the circular arrow to reset the count to zero</string>

    <string name="tutorial_count_title">Additional Options</string>
    <string name="tutorial_count_text">Long pressing the count number gives you a few additional options:\n-Change Count: Allows you to manually enter a new count\n-Increase/Decrease By: Allows you to enter a number to be added to or subtracted from the count</string>

    <string name="tutorial_multicounter_title">Counter Menu</string>
    <string name="tutorial_multicounter_text">Long pressing a counter will open a menu with additional options for it</string>

    <string name="tutorial_multicounter2_title">Re-Organizing Counters</string>
    <string name="tutorial_multicounter2_text">The arrows in the top corners of each counter allow you to re-arrange the order of the counters to your liking</string>

    <string name="tutorial_multicounterview_title">Changing Views</string>
    <string name="tutorial_multicounterview_text">You can choose between two viewing options in the multicounter:\n-Full View: Bigger, more detailed, but fits less counters onto the screen\n-Condensed View: Smaller, less detailed, but fits more counters onto the screen</string>

    <string name="tutorial_counterlist_title">Multicounter Menu</string>
    <string name="tutorial_counterlist_text">You can long press a multicounter to rename, delete, or view more details about it</string>

    <string name="tutorial_search_title">Multicounter Search</string>
    <string name="tutorial_search_text">Tapping the search icon at the top of the screen will allow you to quickly search for a multicounter</string>


</resources>
