<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
    <PreferenceCategory android:title="@string/pref_header_general">
        <SwitchPreference
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:defaultValue="true"
            android:key="switch_preference_vibrate"
            android:summary="@string/pref_description_vibrate"
            android:title="@string/pref_title_vibrate" />
        <SwitchPreference
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:defaultValue="true"
            android:key="switch_preference_resetconfirm"
            android:summary="@string/pref_description_resetconfirm"
            android:title="@string/pref_title_resetconfirm" />
        <SwitchPreference
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:defaultValue="false"
            android:key="switch_preference_screen"
            android:summary="@string/pref_description_screen"
            android:title="@string/pref_title_screen" />
        <SwitchPreference
            android:defaultValue="false"
            android:key="switch_preference_volume"
            android:summary="@string/pref_description_volume"
            android:title="@string/pref_title_volume" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_header_display">
        <ListPreference
            android:defaultValue="1"
            android:entries="@array/list_preference_themes"
            android:entryValues="@array/list_preference_themes"
            android:icon="@drawable/ic_menu_gallery"
            android:key="list_preference_1"
            android:summary="@string/pref_description_themes"
            android:title="@string/pref_title_theme" />

    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_header_info">
        <EditTextPreference
            android:enabled="false"
            android:defaultValue="@string/pref_title_contact"
            android:key="take_zero_contact"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:summary="@string/pref_description_contact"
            android:title="@string/pref_title_contact" />

        <EditTextPreference
            android:enabled="false"
            android:defaultValue="@string/pref_title_version"
            android:key="take_zero_info"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:summary="@string/pref_description_version"
            android:title="@string/pref_title_version" />

    </PreferenceCategory>


    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->

</PreferenceScreen>
