<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_tab"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_multicounter"
            android:icon="@drawable/ic_multicounter_tab"
            android:title="@string/multi_counter" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_tab"
            android:title="@string/settings" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/share" />
            <item
                android:id="@+id/nav_rate"
                android:icon="@drawable/ic_rate_tab"
                android:title="@string/rate" />
            <item
                android:id="@+id/nav_contact"
                android:icon="@drawable/ic_contact_tab"
                android:title="@string/contact" />
        </menu>
    </item>

</menu>
